[project]
authors = [{name = "Priyanka O", email = "21082240+priya-gitTest@users.noreply.github.com"}]
dependencies = ["ruff>=0.14.1,<0.15"]
name = "greet-me1"
requires-python = ">= 3.11"
version = "0.1.11"
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository  = "https://github.com/priya-gitTest/greet_me"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
requests = ">=2.32.5,<3"
build = ">=1.3.0,<2"
twine = ">=6.2.0,<7"
greet_me1 = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python -c 'from greet_me1 import happy; print(happy.greet_happy())'"
greet = "echo 'Happy Python Packaging'"
lint = "ruff check ."




